fix spacing and textarea color

--- a/app/assets/stylesheets/_wroom.css.scss
+++ b/app/assets/stylesheets/_wroom.css.scss
@@ -18,7 +18,7 @@
 
 body#wroom {
   color: $wroom-dark-gray;
-  background-color: $wroom-primary;
+  background-color: white;
   padding: 1rem;
 
   display: flex;
